# xline_path_planner

./: .gitignore  README.md  doc.txt  flask_ros_bridge.py  path_planning_optimization.md  send_code.sh
cad_data/: cad_2_transformed.json  cad_transformed.json  robot_precision_test.json  square_1m.json
docs/: tcp_api.md  使用指南.md  导出JSON数据结构说明.md
install/: local_setup.sh  setup.sh
install/xline_path_planner/include/xline_path_planner/xline_path_planner/action/: plan_path.hpp
install/xline_path_planner/include/xline_path_planner/xline_path_planner/action/detail/: plan_path__struct.h  plan_path__type_support.c
install/xline_path_planner/include/xline_path_planner/xline_path_planner/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/xline_path_planner/lib/xline_path_planner/: planner_node  xline_plan_cli
install/xline_path_planner/local/lib/python3.10/dist-packages/xline_path_planner/: _xline_path_planner_s.ep.rosidl_typesupport_c.c  _xline_path_planner_s.ep.rosidl_typesupport_introspection_c.c
install/xline_path_planner/local/lib/python3.10/dist-packages/xline_path_planner-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/xline_path_planner/share/xline_path_planner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xline_path_planner/share/xline_path_planner/action/: PlanPath.idl
install/xline_path_planner/share/xline_path_planner/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  export_xline_path_planner__rosidl_generator_cExport-release.cmake  export_xline_path_planner__rosidl_generator_cExport.cmake  export_xline_path_planner__rosidl_generator_cppExport.cmake  export_xline_path_planner__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  xline_path_plannerConfig.cmake  xline_path_planner__rosidl_typesupport_cExport.cmake  xline_path_planner__rosidl_typesupport_cppExport-release.cmake  xline_path_planner__rosidl_typesupport_cppExport.cmake  xline_path_planner__rosidl_typesupport_introspection_cExport.cmake  xline_path_planner__rosidl_typesupport_introspection_cppExport-release.cmake  xline_path_planner__rosidl_typesupport_introspection_cppExport.cmake
install/xline_path_planner/share/xline_path_planner/config/: planner.yaml
log/: latest_build
path_visualizations/: path_from_cad.json  path_from_cad_.json
planned_results/: planned_cad_2_transformed.json  planned_robot_precision_test.json  planned_square_1m.json
xline_path_planner/: CMakeLists.txt  package.xml
xline_path_planner/config/: planner.yaml
xline_path_planner/include/daosnrs_planning/: cad_parser.hpp  common_types.hpp  grid_map_generator.hpp  output_formatter.hpp  path_planner.hpp  trajectory_generator.hpp
xline_path_planner/include/xline_path_planner/: cad_parser.hpp  collinear_merger.hpp  common_types.hpp  filename_utils.hpp  geometry_preprocessor.hpp  grid_map_generator.hpp  output_formatter.hpp  path_planner.hpp  planner_engine.hpp  trajectory_generator.hpp
xline_path_planner/src/: cad_parser.cpp  collinear_merger.cpp  geometry_preprocessor.cpp  grid_map_generator.cpp  main.cpp  output_formatter.cpp  path_planner.cpp  planner_node.cpp  trajectory_generator.cpp
xline_path_planner/srv/: PlanPath.srv
xline_path_planner/test/: test_arc_extension.cpp  test_ellipse_extension.cpp  test_ellipse_support.cpp  test_filename_utils.cpp  test_geometry_optimization.cpp  test_spline_support.cpp  test_transition_force_straight.cpp  test_transition_spline_export.cpp
